--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "localmedia": "^2.0.0",
     "mediastream-gain": "^1.0.1",
     "mockconsole": "0.0.1",
+    "msr": "^1.3.2",
     "node-static": "^0.7.7",
     "osc": "2.0.0",
     "osc-min": "^1.1.1",
