--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/ojack/LiveLab#readme",
   "dependencies": {
     "attachmediastream": "^1.3.5",
+    "browsersavefile": "0.0.6",
     "filetransfer": "^2.0.4",
     "fr-accordion": "^1.0.3",
     "localmedia": "^2.0.0",
