--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
+    "start": "electron .",
     "watch-js": "watchify ./app/main.js -v -o ./public/bundle.js -t [babelify --presets [es2015]]",
     "watch": "parallelshell \"npm run start\" \"npm run watch-js\"",
-    "watch-css": "gulp",
-    "build-css": "lessc ./public/css/main.less ./public/css/main.css"
+    "build-css": "lessc ./public/css/main.less ./public/css/main.css",
+    "package": "electron-packager ./ LiveLabApp --platform=darwin --arch=x64 --out ~/Desktop/LiveLabApp"
   },
   "repository": {
     "type": "git",
@@ -33,24 +33,24 @@
     "mockconsole": "0.0.1",
     "msr": "^1.3.2",
     "node-static": "^0.7.7",
-    "osc": "2.0.0",
+    "osc": "2.1.0",
     "osc-min": "^1.1.1",
     "portscanner": "^1.0.0",
     "rtcpeerconnection": "^5.0.0",
-    "socket.io-client": "1.3.7",
     "webrtcsupport": "^2.2.0",
-    "wildemitter": "1.x",
-    "ws": "0.8.0"
+    "wildemitter": "1.x"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.6.0",
     "babelify": "^7.2.0",
     "browserify": "^13.0.0",
+    "electron-packager": "^7.0.4",
+    "electron-prebuilt": "^1.2.5",
     "gulp": "*",
-    "gulp-less": "*",
     "gulp-concat": "*",
-    "gulp-uglify": "*",
+    "gulp-less": "*",
     "gulp-minify-css": "*",
+    "gulp-uglify": "*",
     "less": "^2.7.1",
     "parallelshell": "^2.0.0"
   }
