--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "filetransfer": "^2.0.4",
     "fr-accordion": "^1.0.3",
     "getscreenmedia": "^1.5.4",
+    "getusermedia": "^1.3.7",
+    "hark": "^1.1.3",
     "localmedia": "^2.0.0",
     "mediastream-gain": "^1.0.1",
     "mockconsole": "0.0.1",
