--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "osc-min": "^1.1.1",
     "portscanner": "^1.0.0",
     "rtcpeerconnection": "^5.0.0",
+    "socket.io-client": "^1.4.8",
     "webrtcsupport": "^2.2.0",
     "wildemitter": "1.x"
   },
@@ -44,8 +45,8 @@
     "babel-preset-es2015": "^6.6.0",
     "babelify": "^7.2.0",
     "browserify": "^13.0.0",
-    "electron-packager": "^7.0.4",
-    "electron-prebuilt": "^1.2.5",
+    "electron-packager": "7.0.4",
+    "electron-prebuilt": "1.2.5",
     "gulp": "*",
     "gulp-concat": "*",
     "gulp-less": "*",
