--- a/app/config.json
+++ b/app/config.json
@@ -2,6 +2,17 @@
 	"room": null,
 	"rtc": {
        "autoRequestMedia": true,
+       "url": "https://sandbox.simplewebrtc.com:443/",
+        "peerConnectionConfig": {
+                "iceServers": [{"urls": "stun:stun.l.google.com:19302"}]
+            },
+            "peerConnectionConstraints": {
+                "optional": []
+            },
+            "receiveMedia": {
+                "offerToReceiveAudio": 1,
+                "offerToReceiveVideo": 1
+            },
        "media": {
          "audio": {
            "optional": [
